prevent DOM flickering by hiding the dom until angular stuff is loaded
Reviewer: Dan Jao (post)
Issue: N/A

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -1207,6 +1207,12 @@ input::-ms-clear {
 .fbk-hide{
     display: none;
 }
+
+
+.fbk-hide.ng-scope{
+    display: inherit !important;
+}
+
 .fbk-hide-opacity{
     opacity: 0;
 }
